new files added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webdevelopment</title>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Lobster|Lato|Pacifico|Raleway" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <h2><a href="#">Webdevelopment</a></h2>
+           <a class="logo" href="#"><h3>My domaino</h3><img src="thumb_domino_1024.jpg" height="50px" width="50px"></a>
             <nav>
                 <li>
                     <a href="#">Home</a>
@@ -37,11 +37,13 @@
             </p>
 
             <hr>
-            <ul class="grid">
-                <li class="small" style="background-image: url(assets/img/handcraft.jpg);">...........</li>
-                <li class="large"  style="background-image: url(assets/img/handcraft.jpg);">............</li>
-                <li class="large" style="background-image: url(assets/img/handcraft.jpg);">............</li>
-                <li class="small" style="background-image: url(assets/img/handcraft.jpg);">............</li>
+            <ul class="grid" style="list-style-type:none">
+                <li class="small"></li>
+                <li class="large"></li>
+            </ul>
+            <ul class="grid" style="list-style-type:none">
+                <li class="small2"></li>
+                <li class="large2"></li>
             </ul>
         </section>
 
