--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webdevelopment</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Lobster|Lato|Pacifico|Raleway" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -14,7 +15,7 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Main Page</a>
+                    <a href="#">Projects</a>
                 </li>
                 <li>
                     <a href="#">Contact</a>
@@ -31,7 +32,7 @@
             </div>
         </section>
         <section class="projects">
-            <h3 class="title">Some of our projects</h3>
+            <h3 class="title">Goals</h3>
             <p>We build websites for startups in underdevelopment countries. To give people a chance that most deserve it. And ofcourse, we do this at no cost.
                 We also assist those start-ups in building succesfull marketing strategies, to build their business. Because we are all humans. And we all want to grow bigger.
             </p>
@@ -47,5 +48,49 @@
             </ul>
         </section>
 
+        <section class="packages">
+          <h3 class="title">Packages</h3>
+          <p>Our aim is to help those people that most need it. To make this possible, we work on several projects. Have a look at our efforts to help those in need.</p>
+          <hr>
+
+          <ul class="grid">
+            <li>
+              <i class ="fa fa-camera fa-4x"></i>
+              <h4>Projects</h4>
+              <p>We met some amazing people along the way and started building their projects to help them creating a better future. See an overview of the projects we're currently working on.</p>
+            </li>
+            <li>
+              <i class="fa fa-map-o fa-4x"></i>
+              <h4>Destinations</h4>
+              <p>We already had the opportunity to start some projects in different underdeveloped environemnts. Here is an overview of the destinations we visited.</p>
+            </li>
+            <li>
+              <i class="fa fa-pencil fa-4x"></i>
+              <h4>Blogs and Vlogs</h4>
+              <p>Everyone has their own amazing story. To give you an idea of the situation in these countries, we wrote down inspiring blogs and created informative vlogs. Watch them here.</p>
+            </li>
+            <li>
+             <i class="fa fa-laptop fa-4x"></i>
+              <h4>Website builders</h4>
+              <p>To help those people, we build websites and create marketing strategies. Have a look at what websites we build so far.</p>
+            </li>
+          </ul>
+      </section>
+      <section class="contact">
+        <h3 class="title">Contact</h3>
+        <p> Do you want to know more about our projects? Leave your emailadress behind and we will get in touch with you soon.</p>
+        <hr>
+        <form>
+          <input type="email" placeholder="email">
+          <a href="#" class="btn">Send</a>
+        </form>
+            </section>
+<footer>
+  <ul>
+    <li><a href=#><i class="fa fa-instagram fa-2x"></i></a></li>
+    <li><a href=#><i class="fa fa-facebook-square fa-2x"></i></a></li>
+    <li><a href=#><i class="fa fa-twitter-square fa-2x"></i></a></li>
+  </ul>
+</footer>
     </body>
 </html>
