--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         </form>
             </section>
 <footer>
+    <p>Mydomaino websites</p>
+    <p>Built by Tika Spijkerman</p>
   <ul>
     <li><a href=#><i class="fa fa-instagram fa-2x"></i></a></li>
     <li><a href=#><i class="fa fa-facebook-square fa-2x"></i></a></li>
