--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <hr>
         <form>
           <input type="email" placeholder="email">
-          <a href="#" class="btn" onclick="Alert("Thankyou")">Send</a>
+          <a href="#" class="btn" onclick="alert("Thankyou")">Send</a>
         </form>
             </section>
 <footer>
