--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <hr>
         <form>
           <input type="email" placeholder="email">
-          <a nohref class="btn" onClick="alert("Thankyou")">Send</a>
+          <a class="btn" onClick="alert('Thankyou')">Send</a>
         </form>
             </section>
 <footer>
