--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <hr>
         <form action="">
           <input type="email" placeholder="emailadress">
-         <a class="btn" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})" alert('Thankyou for submitting')">Send</a>
+         <a href="mailto:tika.spijkerman1@gmail.com" class="btn" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send</a>
         </form>
             </section>
 <footer>
