--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
         <p> Do you want to know more about our projects? Leave your emailadress behind and we will get in touch with you soon.</p>
         <hr>
         <form action="">
-          <input type="email" placeholder="emailadress">
-         <a href="mailto:tika.spijkerman1@gmail.com" class="btn" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send</a>
+         <a href="mailto:tika.spijkerman1@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send</a>
         </form>
             </section>
 <footer>
