--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
       </section>
       <section class="contact" id="contact">
         <h3 class="title">Contact</h3>
-        <p> Do you want to know more about our projects? Leave your emailadress behind and we will get in touch with you soon.</p>
+        <p> Do you want to know more about our projects? Send us an email and we will get in touch with you soon.</p>
         <hr>
         <form action="">
-         <a href="mailto:tika.spijkerman1@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send</a>
+         <a href="mailto:tika.spijkerman1@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Emaail us</a>
         </form>
             </section>
 <footer>
