--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       </section>
       <section class="contact" id="contact">
         <h3 class="title">Contact</h3>
-        <p> We are currently looking for interesting projects to work on. If you have an idea, please get in touch with us.</p<
-        <p id="smaller"> Do you want to know more about our projects? Send us an email and we will get in touch with you soon.</p>
+        <p> Do you want to know more about our projects? Send us an email and we will get in touch with you soon.</p>
         <form action="">
          <a href="mailto:tika.spijkerman1@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Email us</a>
         </form>
-            </section>
+        <p id="smaller"> We are currently looking for interesting projects to work on. If you have an idea, please get in touch with us.</p>
+        </section>
 <footer>
     <p>Mydomaino websites</p>
     <p>Built by Tika Spijkerman</p>
