--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <p>Built by Tika Spijkerman</p>
   <ul>
     <li><a href=#><i class="fa fa-instagram fa-2x"></i></a></li>
-    <li><a href=#><i class="fa fa-facebook-square fa-2x"></i></a></li>
+    <li><a href="https://www.facebook.com/mydomaino.web.3"><i class="fa fa-facebook-square fa-2x"></i></a></li>
     <li><a href=#><i class="fa fa-twitter-square fa-2x"></i></a></li> 
   </ul>
 
