--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html>  
+<html> 
     <head> 
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Webdevelopment</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Lobster|Lato|Pacifico|Raleway" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Lobster|Lato|Pacifico|Raleway|Bree+Serif" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110306810-8"></script>
@@ -12,7 +12,6 @@
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-110306810-8');
 </script>
 
@@ -89,7 +88,7 @@
         <h3 class="title">Contact</h3>
         <p> Do you want to know more about our projects? Send us an email and we will get in touch with you soon.</p>
         <form action="">
-         <a href="mailto:mydomainowebsites@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Email us</a>
+         <a href="mailto:tika.spijkerman1@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send Email</a>
         </form>
         <p id="smaller"> We are currently looking for interesting projects to work on. If you have an idea, please get in touch with us.</p>
         </section>
@@ -97,8 +96,8 @@
     <p>Mydomaino websites</p>
     <p>Built by Tika Spijkerman</p>
   <ul>
-    <li><a href="https://www.instagram.com/mydomaino/"><i class="fa fa-instagram fa-2x"></i></a></li>
-    <li><a href="https://www.facebook.com/mydomaino.web.3"><i class="fa fa-facebook-square fa-2x"></i></a></li>
+    <li><a href=#><i class="fa fa-instagram fa-2x"></i></a></li>
+    <li><a href=#><i class="fa fa-facebook-square fa-2x"></i></a></li>
     <li><a href=#><i class="fa fa-twitter-square fa-2x"></i></a></li> 
   </ul>
 
