--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <h3 class="title">Contact</h3>
         <p> Do you want to know more about our projects? Send us an email and we will get in touch with you soon.</p>
         <form action="">
-         <a href="mailto:tika.spijkerman1@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send Email</a>
+         <a href="mailto:mydomainowebsites@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send Email</a>
         </form>
         <p id="smaller"> We are currently looking for interesting projects to work on. If you have an idea, please get in touch with us.</p>
         </section>
