--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <form action="">
          <a href="mailto:mydomainowebsites@gmail.com" class="btn btn-lg" onclick="gtag('event', 'contact', {'event_category':'contact', 'event_action':'click'})">Send Email</a>
         </form>
-        <p id="smaller"> We are currently looking for interesting projects to work on. If you have an idea, please get in touch with us.</p>
+        <p id="smaller"> We are currently looking for interesting projects. If you have an idea, please get in touch!</p>
         </section>
 <footer>
     <p>Mydomaino websites</p>
