--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#hero">Home</a>
                 </li>
                 <li>
-                    <a href="#packages">Projects</a>
+                    <a href="#projects">Projects</a>
                 </li>
                 <li>
                     <a href="#contact">Contact</a>
@@ -56,8 +56,8 @@
                 <li class="large2"></li>
             </ul>
         </section>
-        <section class="packages" id="packages">
-          <h3 class="title">Packages</h3>
+        <section class="projects" id="projects">
+          <h3 class="title">Projects</h3>
           <p>Our aim is to help those people that most need it. To make this possible, we work on several projects. Have a look at our efforts to help those in need.</p>
           <hr>
 
