--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a href="#contact" class="btn">Contact</a>
             </div>
         </section>
-        <section class="goals" id="goals">
+        <section class="projects" id="projects">
             <h3 class="title">Goals</h3>
             <p>We build websites for startups in underdevelopment countries. To give people a chance that most deserve it. And ofcourse, we do this at no cost.
                 We also assist those start-ups in building succesfull marketing strategies, to build their business. Because we are all humans. And we all want to grow bigger.
@@ -56,7 +56,7 @@
                 <li class="large2"></li>
             </ul>
         </section>
-        <section class="projects" id="projects">
+        <section class="packages" id="packages">
           <h3 class="title">Projects</h3>
           <p>Our aim is to help those people that most need it. To make this possible, we work on several projects. Have a look at our efforts to help those in need.</p>
           <hr>
