--- a/index.html
+++ b/index.html
@@ -63,8 +63,13 @@
           <ul class="grid">
             <li>
               <i class ="fa fa-camera fa-4x"></i>
-              <h4>Projects</h4>
+              <h4>Our people</h4>
               <p>We met some amazing people along the way and started building their projects to help them creating a better future. See an overview of the projects we're currently working on.</p>
+            </li>
+            <li>
+              <i class="fa fa-pencil fa-4x"></i>
+              <h4>Blogs and Vlogs</h4>
+              <p>Everyone has their own amazing story. To give you an idea of the situation in these countries, we wrote down inspiring blogs and created informative vlogs. Watch them here.</p>
             </li>
             <li> 
               <i class="fa fa-map-o fa-4x"></i>
@@ -72,13 +77,8 @@
               <p>We already had the opportunity to start some projects in different underdeveloped environemnts. Here is an overview of the destinations we visited.</p>
             </li>
             <li>
-              <i class="fa fa-pencil fa-4x"></i>
-              <h4>Blogs and Vlogs</h4>
-              <p>Everyone has their own amazing story. To give you an idea of the situation in these countries, we wrote down inspiring blogs and created informative vlogs. Watch them here.</p>
-            </li>
-            <li>
              <i class="fa fa-laptop fa-4x"></i>
-              <h4>Website builders</h4>
+              <h4>Websites</h4>
               <p>To help those people, we build websites and create marketing strategies. Have a look at what websites we build so far.</p>
             </li>
           </ul>
