--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <h3 class="title">Projects</h3>
           <p>Our aim is to help those people that most need it. To make this possible, we work on several projects. Have a look at our efforts to help those in need.</p>
           <hr>
-            <li><ul class="grid">
+            <ul class="grid"><li>
               <i class ="fa fa-camera fa-4x"></i>
               <h4>Our people</h4>
               <p>We met some amazing people along the way and started building their projects to help them creating a better future. See an overview of the projects we're currently working on.</p>
