--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <li>
              <i class="fa fa-laptop fa-4x"></i>
               <h4>Websites</h4>
-              <p>To help those people, we build websites and create marketing strategies. Have a look at what websites we build so far.</p>
+              <p>To help those people, we build websites and create marketing strategies. Have a look at what websites we have build so far.</p>
             </li>
           </ul>
       </section>
