--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html> 
     <head>
         <meta charset="utf-8"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=.9">
         <title>Webdevelopment</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light|Lobster|Lato|Pacifico|Raleway|Bree+Serif" rel="stylesheet">
